refactor : 검증 테스트 수정